plugins {
    id "java"
    id "org.springframework.boot" version "4.0.2"
    id "io.spring.dependency-management" version "1.1.7"
}

group = "com.example"
version = "0.0.1-SNAPSHOT"
description = "Demo project for Spring Boot"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-web"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.security:spring-security-test"
    developmentOnly "org.springframework.boot:spring-boot-devtools"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testRuntimeOnly "com.h2database:h2"

    // Lombok
    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"
    testCompileOnly "org.projectlombok:lombok"
    testAnnotationProcessor "org.projectlombok:lombok"

    // postgreSQL DB
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
    implementation "org.postgresql:postgresql"
    implementation "org.springframework.boot:spring-boot-starter-json"

    // QueryDSL
    def queryDslVersion = "7.1"
    implementation "io.github.openfeign.querydsl:querydsl-jpa:$queryDslVersion"
    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:$queryDslVersion:jpa"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // Apache Commons Lang
    implementation "org.apache.commons:commons-lang3:3.20.0"

    // Apache Commons Collections
    implementation "org.apache.commons:commons-collections4:4.5.0"
}

jar {
    enabled = false
}

test {
    useJUnitPlatform()
}